--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,9 +1,9 @@
 MODEL:
-  META_ARCHITECTURE: "RSDA_Seg"
+  META_ARCHITECTURE: "RSKT_Seg"
   PIXEL_MEAN: [123.675, 116.280, 103.530]
   PIXEL_STD: [58.395, 57.120, 57.375]
   SEM_SEG_HEAD:
-    NAME: "RSDA_Seg_Head"
+    NAME: "RSKT_Seg_Head"
     IGNORE_VALUE: 255
     NUM_CLASSES: 171
     TRAIN_CLASS_JSON: "datasets/coco.json"
